# aina_healther_vision_final

./: .gitignore  CLAUDE.md  README.md  SECURITY.md
prototypes/healther-vision/: .env.example  .gitignore  README.md  pyproject.toml
prototypes/healther-vision/docs/: BUILDING_WITH_SYNTHETIC_FEEDS.md  RUNTIME_CONFIGURATION.md
prototypes/healther-vision/src/healther_vision/: __init__.py  app.py  cli.py  config.py  dashboard.py  evaluation.py  imagegen_eval.py  medplum.py  models.py  monitor_console.py  post_detection.py  state.py  synthetic.py  video.py  vlm.py
prototypes/healther-vision/static/mockups/: bridge.js
prototypes/healther-vision/static/mockups/monitor/: Aida - One-Bed Live Monitor.html
prototypes/healther-vision/static/mockups/monitor/css/: colors_and_type.css  ds.css
prototypes/healther-vision/static/mockups/monitor/jsx/: app.jsx  monitor-center.jsx  monitor-chrome.jsx  monitor-left.jsx  monitor-right.jsx  primitives.jsx  tokens.jsx
prototypes/healther-vision/static/mockups/review/: Event Review.html  app.jsx  event-data.jsx  evidence.jsx  icons.jsx  rail.jsx
prototypes/healther-vision/static/mockups/setup/: app-styles.css  app.jsx  canvas.jsx  form.jsx  index.html
prototypes/healther-vision/static/mockups/state-reference/: Aida - State Reference.html
prototypes/healther-vision/static/mockups/state-reference/css/: app.css  reference.css
prototypes/healther-vision/static/mockups/state-reference/jsx/: app.jsx  clinical.jsx  scene.jsx  sections-a.jsx  sections-b.jsx
prototypes/healther-vision/tests/: test_synthetic_and_state.py
(+16 files in other folders)
